translation-tool/inputs/source_meta/objects/OfferMgmt_Add_On_Upfront_Category__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Upfront Fee Records</description>
    <fields>
        <fullName>Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Line_Items_Category_Group_c__c</fullName>
        <label>Offer Line Items Category / Group__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <inlineHelpText>Offer Type wise visibility</inlineHelpText>
        <label>Offer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PaymentApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Org wise visibility</inlineHelpText>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Label__c</fullName>
        <label>Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OfferMgmt Add On Upfront Category</label>
</CustomObject>